--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "RSS reader",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "babel-node": "babel-node",
+    "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
+    "prepublishOnly": "npm run build",
+    "eslint": "eslint"
   },
   "repository": {
     "type": "git",
