--- a/package.json
+++ b/package.json
@@ -52,8 +52,11 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.6"
+    "melanke-watchjs": "^1.5.0",
+    "popper.js": "^1.14.6",
+    "validator": "^10.10.0"
   }
 }
