--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
     "melanke-watchjs": "^1.5.0",
     "popper.js": "^1.14.6",
     "validator": "^10.10.0"
