--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
+    "js-beautify": "^1.8.9",
     "style-loader": "^0.23.1",
+    "timer-promise": "0.0.2",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.0",
     "webpack-dev-server": "^3.1.14"
